--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "install": "^0.13.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0",
     "recharts": "2.15.4",
     "tailwind-merge": "^3.3.1"
   },
